Added chaining visualization

--- a/puyo.ipynb
+++ b/puyo.ipynb
@@ -13,47 +13,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "25696167",
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_piece():\n",
-    "    return random.choice(['O', 'X', '+', '#']), random.choice(['O', 'X', '+', '#'])"
+    "    return random.choice(['R', 'G', 'B', 'Y']), random.choice(['R', 'G', 'B', 'Y'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "e41db3fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "pieces = [next_piece() for _ in range(100)]\n",
-    "board = [[i+j for j in range(4)] for i in range(9)]"
+    "board = [[\" \" for _ in range(4)] for _ in range(9)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "1152581a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 1, 2, 3],\n",
-       " [1, 2, 3, 4],\n",
-       " [2, 3, 4, 5],\n",
-       " [3, 4, 5, 6],\n",
-       " [4, 5, 6, 7],\n",
-       " [5, 6, 7, 8],\n",
-       " [6, 7, 8, 9],\n",
-       " [7, 8, 9, 10],\n",
-       " [8, 9, 10, 11]]"
+       "[[' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' '],\n",
+       " [' ', ' ', ' ', ' ']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "99b39af2",
    "metadata": {},
    "outputs": [],
@@ -175,8 +175,7 @@
     "    def remove_puyo(self, chained_puyos):\n",
     "        for group in chained_puyos:\n",
     "            for row, col in group:\n",
-    "                self.board[row][col] = ' '\n",
-    "                # make sure to also repeat the gravity -> DFS process\n",
+    "                self.board[row][col] = \" \"\n",
     "\n",
     "    def apply_gravity(self):\n",
     "        for col in range(self.board_columns):\n",
@@ -192,14 +191,13 @@
     "    def find_chained_puyos(self):\n",
     "        \"\"\" Uses standard DFS algo to find chained puyos \"\"\"\n",
     "        \"\"\" Returns a list of lists, each individual list contains the cells of the group of chained puyos\"\"\"\n",
-    "        visited = [[False for _ in range(self.board.columns)] for _ in range(self.board_height)]\n",
-    "        print(visited)\n",
+    "        visited = [[False for _ in range(self.board_columns)] for _ in range(self.board_height)]\n",
     "        chained_puyos = []\n",
     "\n",
     "        for row in range(self.board_height):\n",
     "            for col in range(self.board_columns):\n",
-    "                if board[row][col] != ' ' and not visited[row][col]:\n",
-    "                    color = board[row][col]\n",
+    "                if self.board[row][col] != \" \" and not visited[row][col]:\n",
+    "                    color = self.board[row][col]\n",
     "                    group = []\n",
     "                    stack = [(row, col)]\n",
     "\n",
@@ -207,7 +205,7 @@
     "                        crow, ccol = stack.pop()\n",
     "                        if not (0 <= crow < self.board_height and 0 <= ccol < self.board_columns):\n",
     "                            continue\n",
-    "                        if visited[crow][ccol] or board[crow][ccol] != color:\n",
+    "                        if visited[crow][ccol] or self.board[crow][ccol] != color:\n",
     "                            continue\n",
     "\n",
     "                        visited[crow][ccol] = True\n",
@@ -223,7 +221,21 @@
     "\n",
     "    def evaluate_board(self):\n",
     "        # Return a simple heuristic for now (e.g., count of cleared puyos)\n",
-    "        return random.random()  # Replace with actual evaluation\n"
+    "        return random.random()  # Replace with actual evaluation\n",
+    "\n",
+    "def print_board(board):\n",
+    "    emoji_map = {\n",
+    "        'R': '🟥',\n",
+    "        'G': '🟩',\n",
+    "        'B': '🟦',\n",
+    "        'Y': '🟨',\n",
+    "        'P': '🟪',\n",
+    "        ' ': '⬛'\n",
+    "    }\n",
+    "\n",
+    "    for row in board:\n",
+    "        print('|' + ''.join(emoji_map.get(cell, '?!') for cell in row) + '|')\n",
+    "    print(\" \")\n"
    ]
   },
   {
@@ -236,7 +248,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
+   "id": "adb3e243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛🟥|\n",
+      "|⬛🟩⬛🟥|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|🟩⬛⬛🟦|\n",
+      "|🟩🟨🟦🟨|\n",
+      "|🟥🟥🟨🟨|\n",
+      " \n",
+      "Chained puyos: []\n",
+      "\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|🟥🟩⬛🟦|\n",
+      "|🟩🟩⬛🟦|\n",
+      "|🟩🟨🟦🟨|\n",
+      "|🟥🟥🟨🟨|\n",
+      " \n",
+      "Chained puyos: [[(5, 1), (6, 1), (6, 0), (7, 0)]]\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛🟨🟦🟨|\n",
+      "|🟥🟥🟨🟨|\n",
+      " \n",
+      "=================================\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|🟥⬛⬛🟦|\n",
+      "|🟥🟨🟦🟨|\n",
+      "|🟥🟥🟨🟨|\n",
+      " \n",
+      "Chained puyos: [[(6, 0), (7, 0), (8, 0), (8, 1)]]\n",
+      "\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛🟨🟦🟨|\n",
+      "|⬛⬛🟨🟨|\n",
+      " \n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛🟦🟨|\n",
+      "|⬛🟨🟨🟨|\n",
+      " \n",
+      "Chained puyos: [[(7, 3), (8, 3), (8, 2), (8, 1)]]\n",
+      "\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛🟦⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      " \n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛🟦🟦|\n",
+      " \n",
+      "Chained puyos: [[(6, 3), (7, 3), (8, 3), (8, 2)]]\n",
+      "\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      " \n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      " \n",
+      "Chained puyos: []\n",
+      "\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛⬛🟥|\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "example_board = [\n",
+    "    [' ', ' ', ' ', ' '],\n",
+    "    [' ', ' ', ' ', ' '],\n",
+    "    [' ', 'G', ' ', 'R'],\n",
+    "    [' ', 'G', ' ', 'R'],\n",
+    "    ['R', ' ', ' ', 'B'],\n",
+    "    ['R', ' ', ' ', 'B'],\n",
+    "    ['G', ' ', ' ', 'B'],\n",
+    "    ['G', 'Y', 'B', 'Y'],\n",
+    "    ['R', 'R', 'Y', 'Y'],\n",
+    "]\n",
+    "\n",
+    "pieces = []  # No pieces needed for this test\n",
+    "\n",
+    "# Instantiate game state\n",
+    "state = PuyoGameState(example_board, pieces)\n",
+    "print_board(state.board)\n",
+    "# Testing of functions\n",
+    "# find chains, should be empty\n",
+    "chained = state.find_chained_puyos()\n",
+    "print(f\"Chained puyos: {chained}\\n\")\n",
+    "\n",
+    "# Step 1: Apply gravity\n",
+    "state.apply_gravity()\n",
+    "print_board(state.board)\n",
+    "\n",
+    "# Step 2: Find chains\n",
+    "chained = state.find_chained_puyos() # empty output\n",
+    "print(f\"Chained puyos: {chained}\")\n",
+    "\n",
+    "# Step 3: Pop puyos\n",
+    "state.remove_puyo(chained)\n",
+    "print_board(state.board)\n",
+    "\n",
+    "print(\"=================================\")\n",
+    "# Loop until no chains\n",
+    "while chained:\n",
+    "    state.apply_gravity()\n",
+    "    print_board(state.board)\n",
+    "    chained = state.find_chained_puyos()\n",
+    "    print(f\"Chained puyos: {chained}\\n\")\n",
+    "    state.remove_puyo(chained)\n",
+    "    print_board(state.board)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "f04234ff",
    "metadata": {},
    "outputs": [],
@@ -274,30 +469,28 @@
     "\n",
     "test_board = [\n",
     "    # 0    1    2    3    4    5\n",
-    "    [' ', ' ', ' ', ' ', ' ', 'B'], # 0\n",
-    "    [' ', ' ', ' ', ' ', ' ', 'B'], # 1\n",
-    "    [' ', ' ', ' ', 'A', ' ', 'B'], # 2\n",
-    "    [' ', ' ', 'B', 'A', 'A', 'B'], # 3\n",
-    "    [' ', 'C', 'B', 'A', 'A', 'B'], # 4\n",
-    "    ['D', 'C', 'B', 'B', 'C', 'B'], # 5\n",
+    "    [' ', ' ', ' ', ' ', ' ', 'Y'], # 0\n",
+    "    [' ', ' ', ' ', ' ', ' ', 'Y'], # 1\n",
+    "    [' ', ' ', ' ', 'R', ' ', 'Y'], # 2\n",
+    "    [' ', ' ', 'B', 'R', 'R', 'B'], # 3\n",
+    "    [' ', 'G', 'B', 'R', 'R', 'B'], # 4\n",
+    "    ['R', 'G', 'B', 'B', 'Y', 'Y'], # 5\n",
     "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "6a8f35b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(0, 5), (1, 5), (2, 5), (3, 5), (4, 5), (5, 5)],\n",
-       " [(2, 3), (3, 3), (3, 4), (4, 4), (4, 3)],\n",
-       " [(3, 2), (4, 2), (5, 2), (5, 3)]]"
+       "[[(2, 3), (3, 3), (3, 4), (4, 4), (4, 3)], [(3, 2), (4, 2), (5, 2), (5, 3)]]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
