Quick MCTS implementation
- Explore intermediate results / play around more with longer loops
- I want to sleep for now

--- a/puyo.ipynb
+++ b/puyo.ipynb
@@ -44,12 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "36a86977",
    "metadata": {},
    "outputs": [],
    "source": [
     "INDIVIDUAL_LINK_POINTS = {\n",
+    "    0: 0,\n",
     "    1: 40,\n",
     "    2: 320,\n",
     "    3: 640,\n",
@@ -74,13 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "id": "898a1afc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: add color/grouping functionality/logic later\n",
     "TOTAL_CHAIN_POINTS = {\n",
+    "    0: 0,\n",
     "    1: 40,\n",
     "    2: 360,\n",
     "    3: 1000,\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "99b39af2",
    "metadata": {},
    "outputs": [],
@@ -131,7 +133,7 @@
     "    def __str__(self):\n",
     "        return f\"Turn: {self.turn}, Score: {self.score}\\n\" + \"\\n\".join(\"\".join(row) for row in self.board)\n",
     "\n",
-    "    def get_moves(self):\n",
+    "    def getPossibleActions(self):\n",
     "        \"\"\" Required \"\"\"\n",
     "        \"\"\" Returns list of valid moves in ((column1, row1, color1), (column2, row2, color2)) format\"\"\"\n",
     "        piece = self.pieces[self.turn]\n",
@@ -190,7 +192,7 @@
     "                return row\n",
     "        return self.board_height # empty column\n",
     "\n",
-    "    def do_move(self, move):\n",
+    "    def takeAction(self, move):\n",
     "        \"\"\" Required \"\"\"\n",
     "        if move is None:\n",
     "            raise ValueError(\"Attempted to apply a None move.\") # i dont think this will ever trigger. keep a lookout.\n",
@@ -212,15 +214,15 @@
     "\n",
     "        return PuyoGameState(new_board, self.pieces, new_score, turn=self.turn + 1)\n",
     "\n",
-    "    def is_terminal(self):\n",
+    "    def isTerminal(self):\n",
     "        \"\"\" Required \"\"\"\n",
     "        # Top-out check or no more pieces\n",
     "        return self.board[0][1] != \" \" or self.turn >= len(self.pieces)\n",
     "\n",
-    "    def get_result(self):\n",
+    "    def getReward(self):\n",
     "        \"\"\" Required \"\"\"\n",
     "        # Simple scoring mechanism for now\n",
-    "        return self.score()\n",
+    "        return self.score\n",
     "\n",
     "    def place_piece(self, board, piece):\n",
     "        (col1, row1, color1), (col2, row2, color2) = piece\n",
@@ -300,11 +302,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "693ba54d",
+   "execution_count": 90,
+   "id": "2e38e29e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pieces = [next_piece() for _ in range(10)]\n",
+    "board = [[\" \" for _ in range(4)] for _ in range(9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "1dd7b1b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('B', 'Y'),\n",
+       " ('B', 'G'),\n",
+       " ('Y', 'Y'),\n",
+       " ('R', 'G'),\n",
+       " ('Y', 'R'),\n",
+       " ('G', 'G'),\n",
+       " ('B', 'B'),\n",
+       " ('B', 'Y'),\n",
+       " ('R', 'G'),\n",
+       " ('G', 'B')]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "693ba54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|🟦🟨⬛⬛|\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an MCTS instance\n",
+    "searcher = mcts(timeLimit=1000)  # Time in ms to search for each move\n",
+    "\n",
+    "# Start from your initial game state\n",
+    "initial_state = PuyoGameState(board, pieces)\n",
+    "\n",
+    "# Use MCTS to search for the best move\n",
+    "best_move = searcher.search(\n",
+    "    initialState=initial_state\n",
+    ")\n",
+    "\n",
+    "next_state = initial_state.takeAction(best_move)\n",
+    "print_board(next_state.board)"
+   ]
   },
   {
    "cell_type": "markdown",
