Added simulation of entire game using MCTS
- still does not work well, needs addition of other features

--- a/puyo.ipynb
+++ b/puyo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "92cc5728",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "25696167",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e41db3fd",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "36a86977",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "898a1afc",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "id": "99b39af2",
    "metadata": {},
    "outputs": [],
@@ -148,6 +148,16 @@
     "                if valid:\n",
     "                    moves.append((pos1 + col1, pos2 + col2))\n",
     "        return moves\n",
+    "    \n",
+    "    def no_possible_moves_check(self):\n",
+    "        \"\"\" Checks if there are remaining moves for isTerminal() \"\"\"\n",
+    "        # For simplicity, assume 4 rotations: 0 = up, 1 = right, 2 = down, 3 = left\n",
+    "        for rotation in range(4):\n",
+    "            for column in range(self.board_columns):\n",
+    "                _, _, valid = self.placement_position(column, rotation, self.board)\n",
+    "                if valid:\n",
+    "                    return False\n",
+    "        return True\n",
     "\n",
     "    def placement_position(self, column, rotation, board):\n",
     "        \"\"\"Returns ((col1, row1), (col2, row2), valid_position)\"\"\"\n",
@@ -217,7 +227,7 @@
     "    def isTerminal(self):\n",
     "        \"\"\" Required \"\"\"\n",
     "        # Top-out check or no more pieces\n",
-    "        return self.board[0][1] != \" \" or self.turn >= len(self.pieces)\n",
+    "        return self.board[0][1] != \" \" or self.turn >= len(self.pieces) or self.no_possible_moves_check()\n",
     "\n",
     "    def getReward(self):\n",
     "        \"\"\" Required \"\"\"\n",
@@ -302,48 +312,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "id": "2e38e29e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pieces = [next_piece() for _ in range(10)]\n",
+    "pieces = [next_piece() for _ in range(25)]\n",
     "board = [[\" \" for _ in range(4)] for _ in range(9)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "1dd7b1b8",
+   "execution_count": 37,
+   "id": "6b5a4e60",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('B', 'Y'),\n",
-       " ('B', 'G'),\n",
-       " ('Y', 'Y'),\n",
-       " ('R', 'G'),\n",
-       " ('Y', 'R'),\n",
-       " ('G', 'G'),\n",
-       " ('B', 'B'),\n",
-       " ('B', 'Y'),\n",
-       " ('R', 'G'),\n",
-       " ('G', 'B')]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best move for Turn 0: ((3, 8, 'B'), (3, 7, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛⬛⬛🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 1: ((1, 8, 'B'), (2, 8, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|⬛🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 2: ((2, 7, 'R'), (1, 7, 'R'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟥🟥🟦|\n",
+      "|⬛🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 3: ((0, 8, 'B'), (1, 6, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟥🟥🟦|\n",
+      "|🟦🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 4: ((2, 6, 'R'), (2, 5, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟩⬛|\n",
+      "|⬛🟩🟥⬛|\n",
+      "|⬛🟥🟥🟦|\n",
+      "|🟦🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 5: ((1, 4, 'Y'), (1, 5, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟨⬛⬛|\n",
+      "|⬛🟨🟩⬛|\n",
+      "|⬛🟩🟥⬛|\n",
+      "|⬛🟥🟥🟦|\n",
+      "|🟦🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 6: ((2, 4, 'G'), (2, 3, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟩⬛|\n",
+      "|⬛🟨🟩⬛|\n",
+      "|⬛🟨🟩⬛|\n",
+      "|⬛🟩🟥⬛|\n",
+      "|⬛🟥🟥🟦|\n",
+      "|🟦🟦🟨🟦|\n",
+      " \n",
+      "Score so far: 0\n",
+      "\n",
+      "Best move for Turn 7: ((3, 6, 'R'), (2, 2, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟦|\n",
+      "|🟦🟦⬛🟦|\n",
+      " \n",
+      "Score so far: 1000\n",
+      "\n",
+      "Best move for Turn 8: ((2, 7, 'R'), (2, 8, 'R'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟥🟦|\n",
+      "|🟦🟦🟥🟦|\n",
+      " \n",
+      "Score so far: 1000\n",
+      "\n",
+      "Best move for Turn 9: ((2, 6, 'R'), (1, 7, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟥⬛|\n",
+      "|⬛🟨🟥🟦|\n",
+      "|🟦🟦🟥🟦|\n",
+      " \n",
+      "Score so far: 1000\n",
+      "\n",
+      "Best move for Turn 10: ((3, 6, 'G'), (2, 5, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟩⬛|\n",
+      "|⬛⬛🟥🟩|\n",
+      "|⬛🟨🟥🟦|\n",
+      "|🟦🟦🟥🟦|\n",
+      " \n",
+      "Score so far: 1000\n",
+      "\n",
+      "Best move for Turn 11: ((1, 6, 'G'), (0, 7, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟩⬛|\n",
+      "|⬛🟩🟥🟩|\n",
+      "|🟦🟨🟥🟦|\n",
+      "|🟦🟦🟥🟦|\n",
+      " \n",
+      "Score so far: 1000\n",
+      "\n",
+      "Best move for Turn 12: ((0, 5, 'Y'), (0, 6, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟩⬛|\n",
+      "|⬛⬛🟥🟩|\n",
+      "|⬛🟩🟥🟦|\n",
+      "|🟨🟨🟥🟦|\n",
+      " \n",
+      "Score so far: 1040\n",
+      "\n",
+      "Best move for Turn 13: ((3, 5, 'G'), (3, 4, 'R'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛🟥|\n",
+      "|⬛⬛🟩🟩|\n",
+      "|⬛⬛🟥🟩|\n",
+      "|⬛🟩🟥🟦|\n",
+      "|🟨🟨🟥🟦|\n",
+      " \n",
+      "Score so far: 1040\n",
+      "\n",
+      "Best move for Turn 14: ((1, 6, 'B'), (1, 5, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟩⬛🟦|\n",
+      "|🟨🟨⬛🟦|\n",
+      " \n",
+      "Score so far: 1400\n",
+      "\n",
+      "Best move for Turn 15: ((1, 5, 'B'), (1, 4, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟩⬛🟦|\n",
+      "|🟨🟨⬛🟦|\n",
+      " \n",
+      "Score so far: 1400\n",
+      "\n",
+      "Best move for Turn 16: ((1, 3, 'G'), (2, 8, 'R'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟩⬛🟦|\n",
+      "|🟨🟨🟥🟦|\n",
+      " \n",
+      "Score so far: 1400\n",
+      "\n",
+      "Best move for Turn 17: ((3, 6, 'B'), (3, 5, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟦⬛🟩|\n",
+      "|⬛🟦⬛🟦|\n",
+      "|⬛🟩⬛🟦|\n",
+      "|🟨🟨🟥🟦|\n",
+      " \n",
+      "Score so far: 1400\n",
+      "\n",
+      "Best move for Turn 18: ((1, 2, 'R'), (0, 7, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟥⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟦⬛🟩|\n",
+      "|⬛🟦⬛🟦|\n",
+      "|🟩🟩⬛🟦|\n",
+      "|🟨🟨🟥🟦|\n",
+      " \n",
+      "Score so far: 1400\n",
+      "\n",
+      "Best move for Turn 19: ((2, 7, 'R'), (2, 6, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟥🟥⬛|\n",
+      "|🟨🟨🟥🟩|\n",
+      " \n",
+      "Score so far: 1760\n",
+      "\n",
+      "Best move for Turn 20: ((2, 5, 'Y'), (2, 6, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟨⬛|\n",
+      "|⬛⬛🟨⬛|\n",
+      "|⬛🟥🟥⬛|\n",
+      "|🟨🟨🟥🟩|\n",
+      " \n",
+      "Score so far: 1760\n",
+      "\n",
+      "Best move for Turn 21: ((0, 6, 'Y'), (0, 7, 'G'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛🟨⬛|\n",
+      "|🟨⬛🟨⬛|\n",
+      "|🟩🟥🟥⬛|\n",
+      "|🟨🟨🟥🟩|\n",
+      " \n",
+      "Score so far: 1760\n",
+      "\n",
+      "Best move for Turn 22: ((1, 5, 'G'), (1, 6, 'Y'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|🟩🟥🟥⬛|\n",
+      "|🟨🟨🟥🟩|\n",
+      " \n",
+      "Score so far: 1800\n",
+      "\n",
+      "Best move for Turn 23: ((1, 5, 'G'), (1, 4, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|🟩🟥🟥⬛|\n",
+      "|🟨🟨🟥🟩|\n",
+      " \n",
+      "Score so far: 1800\n",
+      "\n",
+      "Best move for Turn 24: ((2, 6, 'R'), (2, 5, 'B'))\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛⬛⬛⬛|\n",
+      "|⬛🟦⬛⬛|\n",
+      "|⬛🟩⬛⬛|\n",
+      "|🟩🟩⬛⬛|\n",
+      "|🟨🟨🟦🟩|\n",
+      " \n",
+      "Score so far: 1840\n",
+      "\n",
+      "Game Over!\n",
+      "Final Score: 1840\n"
+     ]
     }
    ],
    "source": [
-    "pieces"
+    "# Convert to expected format: [(c1, c2), ...] — already matches\n",
+    "initial_state = PuyoGameState(board, pieces)\n",
+    "\n",
+    "# Initialize MCTS\n",
+    "searcher = mcts(timeLimit=50000)  # 1000 ms per move\n",
+    "\n",
+    "current_state = initial_state\n",
+    "while not current_state.isTerminal():\n",
+    "    best_action = searcher.search(initialState=current_state)\n",
+    "    print(f\"Best move for Turn {current_state.turn}: {best_action}\")\n",
+    "    current_state = current_state.takeAction(best_action)\n",
+    "    print_board(current_state.board)\n",
+    "    print(f\"Score so far: {current_state.score}\\n\")\n",
+    "\n",
+    "print(\"Game Over!\")\n",
+    "print(f\"Final Score: {current_state.score}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "693ba54d",
    "metadata": {},
    "outputs": [
